--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "next start -p 8855",
     "lint": "next lint",
     "check-deps": "node depend.js",
-    "install-deps": "node depend.js"
+    "install-deps": "node depend.js",
+    "fix-deps": "node fix-deps.js"
   },
   "dependencies": {
     "next": "^14.0.0",
