--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "next lint",
     "check-deps": "node depend.js",
     "install-deps": "node depend.js",
-    "fix-deps": "node fix-deps.js"
+    "fix-deps": "node fix-deps.js",
+    "clean-test": "node clean-and-test.js"
   },
   "dependencies": {
     "next": "^14.0.0",
