--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "install-deps": "node depend.js",
     "fix-deps": "node fix-deps.js",
     "clean-test": "node clean-and-test.js",
-    "test-python": "python test-downloader.py"
+    "test-python": "python test-downloader.py",
+    "test-json": "python test-python-json.py"
   },
   "dependencies": {
     "next": "^14.0.0",
